[gd_scene load_steps=2 format=3 uid="uid://4tammtroe2ew"]

[ext_resource type="Script" uid="uid://0stvst8g6ivd" path="res://scripts/ui/card_ui.gd" id="1"]

[node name="CardUI" type="PanelContainer"]
custom_minimum_size = Vector2(120, 170)
offset_right = 120.0
offset_bottom = 170.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/TopRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Card Name"
theme_override_font_sizes/font_size = 13

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/TopRow"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
horizontal_alignment = 2

[node name="IconRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
stretch_mode = 5
expand_mode = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Card effect description"
theme_override_font_sizes/font_size = 11
autowrap_mode = 2

[node name="RarityBar" type="ColorRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 3)
color = Color(0.6, 0.6, 0.6, 1)
